# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
hooks/: sops_secrets.py
