[metadata]
name = pre_commit
version = 0.1.0
description = Custom pre-commit hooks I needed.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/vetyy/pre-commit
author = Matej Vetrak
author_email = mato.vetrak@gmail.com
license = MIT
license_file = LICENSE

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    ruyaml==0.20.0
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    sops_secrets = hooks.sops_secrets:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
